Fix whitespace of expanding boxes

--- a/src/profile/components/downloadData/DownloadData.module.css
+++ b/src/profile/components/downloadData/DownloadData.module.css
@@ -1,4 +1,3 @@
 .button {
-  margin-bottom: 30px;
-  margin-top: 20px;
+  margin-top: var(--spacing-s);
 }
